--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href='' />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Recipro</title>
+  <title>COOCKED</title>
 </head>
 
 <body>
